# mlp

./: .gitignore  CMakeLists.txt  report.md
materials/: perceptron.md
src/dependencies/qcustomplot/: CMakeLists.txt
src/s21_app/: CMakeLists.txt
src/s21_app/include/: s21_app.h  s21_draw_image.h  s21_main_controller.h  s21_main_model.h  s21_main_window.h  s21_new_perceptron.h  s21_training_history.h  s21_windows.h
src/s21_app/source/: s21_draw_image.cc  s21_edit_perceptron.cc  s21_main_controller.cc  s21_main_model.cc  s21_main_window.cc  s21_new_perceptron.cc  s21_progress_window.cc  s21_training_history.cc  s21_windows.cc
src/s21_app/source/main/: main.cc
src/s21_app/ui/: edit_perceptron.ui  main_window.ui  new_perceptron.ui  progress_window.ui
src/s21_batch_data/: CMakeLists.txt
src/s21_batch_data/include/: s21_batch_data.h
src/s21_batch_data/source/: loading.cc  shuffle.cc  train.cc  validate.cc
src/s21_batch_data/source/foundation/: accessor.cc  constructor.cc  operator.cc
src/s21_batch_data/test/: loading.cc  s21_batch_data_test.h  shuffle.cc  train.cc  validate.cc
src/s21_batch_data/test/foundation/: accessor.cc  constructor.cc  operator.cc
src/s21_batch_data/test/resource/: 10_30.csv  5_15.csv  5_30.csv  5_45.csv  data.csv  gen.py
src/s21_batch_data/test/resource/perceptron_4_30_20_10_5/: gen.py  info.txt  layer_1_bias.txt  layer_1_weight.txt  layer_2_bias.txt  layer_2_weight.txt  layer_3_bias.txt  layer_3_weight.txt
src/s21_image/: CMakeLists.txt
src/s21_image/include/: s21_image.h
src/s21_image/source/: grayscale.cc  matrix_conversion.cc  rescale.cc  transform.cc  write_file.cc
src/s21_image/source/foundation/: accessor.cc  constructor.cc
src/s21_image/test/: grayscale.cc  matrix_conversion.cc  rescale.cc  s21_image_test.h  write_file.cc
src/s21_image/test/foundation/: accessor.cc  constructor.cc
src/s21_matrix/: CMakeLists.txt
src/s21_matrix/include/: s21_matrix.h
src/s21_matrix/source/: math.cc  multiply.cc  parse.cc  transpose.cc  transposed.cc
src/s21_matrix/source/foundation/: accessor.cc  copy.cc  description.cc  matrix.cc  operator.cc
src/s21_matrix/test/: math.cc  parse.cc  transpose.cc  transposed.cc
src/s21_matrix/test/foundation/: accessor.cc  copy.cc  description.cc  matrix.cc  operator.cc
src/s21_perceptron/: CMakeLists.txt
src/s21_perceptron/include/: s21_graph_perceptron.h  s21_matrix_perceptron.h  s21_perceptron.h  s21_utils.h
src/s21_perceptron/source/graph_perceptron/: back_propagation.cc  export_perceptron_to_file.cc  forward_propagation.cc
src/s21_perceptron/source/graph_perceptron/foundation/: graph_perceptron.cc
src/s21_perceptron/source/matrix_perceptron/: back_propagation.cc  export_perceptron_to_file.cc  forward_propagation.cc
src/s21_perceptron/source/matrix_perceptron/foundation/: matrix_perceptron.cc
src/s21_perceptron/source/utils/: random.cc  relu.cc  sigmoid.cc  softmax.cc
src/s21_perceptron/test/graph_perceptron/: back_propagation.cc  export_perceptron_to_file.cc  forward_propagation.cc
src/s21_perceptron/test/main/: main.cc
src/s21_perceptron/test/matrix_perceptron/: back_propagation.cc  export_perceptron_to_file.cc  forward_propagation.cc
src/s21_perceptron/test/matrix_perceptron/foundation/: matrix_perceptron.cc
src/s21_perceptron/test/resource/perceptron_3_2_2_1/: info.txt  layer_1_bias.txt  layer_1_weight.txt  layer_2_bias.txt  layer_2_weight.txt
src/s21_perceptron/test/resource/perceptron_3_32_128_4/: info.txt  layer_1_bias.txt  layer_1_weight.txt  layer_2_bias.txt  layer_2_weight.txt
src/s21_perceptron/test/resource/perceptron_4_64_30_12_10/: info.txt  layer_1_bias.txt  layer_1_weight.txt  layer_2_bias.txt  layer_2_weight.txt  layer_3_bias.txt  layer_3_weight.txt
src/s21_perceptron/test/utils/: random.cc  relu.cc  sigmoid.cc  softmax.cc
